--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ numpy==1.17.1
 Pillow==6.2.2
 Pypubsub==4.0.3
 pyquaternion==0.9.5
+pyperclip==1.8.0
 recordclass==0.13.2
 six==1.12.0
 wxPython==4.1.0
